--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "css-loader": "^5.2.6",
+        "esbuild-loader": "^2.18.0",
         "html-webpack-plugin": "^5.3.1",
         "style-loader": "^2.0.0",
         "ts-loader": "^9.2.2",
